fixed js gsap flicker bug, added easter eggs hint

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -304,3 +304,42 @@ p {
 .fade-in-links--projects {
   animation: fade-in-links 0.6s ease-in-out forwards;
 }
+
+.easter-eggs-hint {
+  position: fixed;
+  bottom: 2.5rem;
+  right: 2.5rem;
+  transition: all 0.3s ease;
+
+  @media only screen and (max-width: $bp-small) {
+    display: none;
+  }
+
+  &--text {
+    position: fixed;
+    right: 10rem;
+    bottom: 2rem;
+    // background-color: $color-dark-grey;
+    color: $color-off-white;
+    opacity: 0;
+    letter-spacing: 0.322vw;
+    line-height: 2.8rem;
+    transition: all 0.3s ease;
+    mix-blend-mode: difference;
+
+    &.open {
+      opacity: 1;
+    }
+  }
+
+  & svg {
+    fill: $color-off-white;
+    opacity: 0.5;
+    width: 3.5rem;
+    height: 3.5rem;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
